Fixed scheduling bug in errai-otec.
Now when OTServerEngine interrupts housekeeper thread immediately.
Otherwise thread has unnecessary 10 second pause.